update to test env that exists at step time

--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -24,7 +24,7 @@ jobs:
           echo ::set-env name=RUN_FILTER::$(
             echo $LABEL_NAME | cut -d/ -f 2
           )
-          if [[ "$RUN_FILTER" != *"TestAcc"* ]]; then exit 1; fi
+          if [[ "$LABEL_NAME" != *"TestAcc"* ]]; then exit 1; fi
 
       - name: Checkout
         uses: actions/checkout@v2.0.0
