--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -42,10 +42,12 @@ jobs:
         with:
           RUN_FILTER: ${{ env.RUN_FILTER }}
           GITHUB_ORGANIZATION: terraformtesting
+          GITHUB_BASE_URL: https://api.github.com/
           GITHUB_TEST_USER: github-terraform-test-user
           GITHUB_TEST_USER_NAME: "Test User"
           GITHUB_TEST_USER_EMAIL: 60107403+github-terraform-test-user@users.noreply.github.com
           GITHUB_TEST_USER_TOKEN: ${{ secrets.GITHUB_TEST_USER_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TEST_USER_TOKEN }}
           GITHUB_TEST_COLLABORATOR: github-terraform-test-collaborator
           GITHUB_TEST_COLLABORATOR_TOKEN: ${{ secrets.GITHUB_TEST_COLLABORATOR_TOKEN }}
           GITHUB_TEMPLATE_REPOSITORY: terraform-template-module
