--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -42,6 +42,7 @@ jobs:
         with:
           RUN_FILTER: ${{ env.RUN_FILTER }}
           GITHUB_ORGANIZATION: Mck-Script-Test
+          GITHUB_BASE_URL: https://api.github.com/
           GITHUB_TEST_USER: sargam-badyal
           GITHUB_TEST_USER_NAME: "Sargam"
           GITHUB_TEST_USER_EMAIL: 62246551+sargam-badyal@users.noreply.github.com
